# HydroOps

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT_CHECKLIST.md  GIT_SETUP.md  LICENSE  README.md  SETUP.md  docker-compose.yml
.github/: RELEASE_GUIDE.md  release-draft.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
certs/docs/: README.md
docker/alertmanager/: compose.yml
docker/alertmanager/config/: alertmanager.yml
docker/grafana/: compose.yml
docker/grafana/provisioning/datasources/: influxdb-datasource.yml
docker/influxdb/: compose.yml
docker/kapacitor/: compose.yml
docker/kapacitor/config/: kapacitor.conf
docker/kasen2influxdb/: Dockerfile  compose.yml  config.csv  config.json.example  main.py  pyproject.toml  requirements.txt  test_scrape.py
docker/loki/: compose.yml
docker/loki/config/: loki-config.yml
docker/n8n/: compose.yml
docker/nginx_static/: compose.yml
docker/nginx_static/config/: nginx.conf
docker/nodered/: compose.yml
docker/nodered/config/: settings.js.example
docker/prometheus/: compose.yml
docker/prometheus/config/: prometheus.yml
docker/promtail/: compose.yml
docker/promtail/config/: promtail-config.yml
docker/telegraf/: compose.yml
docker/telegraf/config/: telegraf.conf
docker/traefik/: compose.yml  dashboard_users.txt.example  traefik.yml
docker/traefik/dynamic_conf/: README.md  certificates.yml  middlewares.yml  toshi_hass.yml
